perf: getAppCount 不再为了一个整数建两个列表 (1.3.18)
原先：

    public static int getAppCount() { return getApps().size(); }

而 getApps() 会 new 一个 ArrayList，再让 List.copyOf 把它拷成第二个数组，
然后调用方只读一个 size。

主屏一帧里这条路至少走四次——renderAppGrid 的边缘翻页结算、pageCount、
goToPage 的夹取、updateAppHover；拖动时 mouseDragged 再加一次。每帧
十次数组分配，只为几个个位数的计数。

三处改动：

  getAppCount   只数不建表
  getApp(int)   直接遍历数到第 index 个，不再先建整张表再取一个
  getApps       末尾 List.copyOf 换成 unmodifiableList，少一次数组拷贝。
                out 是方法内新建的局部变量，出了这里没有第二个人握着
                它的引用，包一层只读视图与真拷一份在外部完全等价

跳过规则三处保持一致（目录里没有的 id 不算）。不一致的话"主屏画了几个"
与"一共几个"会对不上，表现是最后一页多出一格点不动的空白——而那种错位
没人会往"计数方法"上想。

getCatalog / getAvailable / getCompanionApps 里的 List.copyOf 保留：
它们包的是 CATALOG.values() 这种活视图，真拷一份是必要的，而且都在
商店界面的刷新路径上，不是每帧。